// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionList /> should render a section list with a titled section without props 1`] = `
@media only screen and (min-width:640px) {
  .c0 {
    margin-left: 24px;
    margin-right: 24px;
  }
}

@media only screen and (min-width:640px) {
  .c2 {
    border-bottom: 1px solid #E1E6EB;
  }

  .c2:last-child {
    border-bottom: 0;
  }
}

@media only screen and (min-width:640px) {
  .c1 {
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (max-width:639px) {
  .c3 {
    padding: 24px 16px 12px;
  }
}

@media only screen and (max-width:639px) {
  .c4 {
    padding-bottom: 12px;
  }
}

@media only screen and (min-width:640px) {
  .c4 {
    margin-right: 24px;
  }
}

@media only screen and (min-width:640px) {
  .c5 {
    padding-top: 1.5rem;
  }
}

@media only screen and (max-width:639px) {
  .c5 {
    background-color: #FAFBFC;
    border-top: 1px solid #E1E6EB;
    border-bottom: 1px solid #E1E6EB;
    padding: 24px 16px;
  }
}

<SectionList>
  <styled.div>
    <div
      className="c0"
    >
      <TitledSection>
        <Styled(styled.div)>
          <styled.div
            className="c1"
          >
            <div
              className="c1 c2"
            >
              <XYGrid
                gutterMarginX={false}
                gutterMarginY={false}
                gutterPaddingX={false}
                gutterPaddingY={false}
                vertical={false}
              >
                <div
                  className="ihrGridX"
                >
                  <Cell
                    size={
                      Object {
                        "min": 12,
                      }
                    }
                  >
                    <div
                      className="ihrCell min-12"
                    >
                      <styled.div>
                        <div
                          className="c3"
                        >
                          <XYGrid
                            gutterMarginX={false}
                            gutterMarginY={false}
                            gutterPaddingX={false}
                            gutterPaddingY={false}
                            vertical={false}
                            verticalAlignment="middle"
                          >
                            <div
                              className="ihrGridX align-middle"
                            >
                              <Cell
                                size={
                                  Object {
                                    "desktop": "auto",
                                    "min": 12,
                                    "tablet": "auto",
                                  }
                                }
                              >
                                <div
                                  className="ihrCell desktop-auto tablet-auto min-12"
                                >
                                  <Styled(SectionDescription)>
                                    <SectionDescription
                                      className="c4"
                                      links={Array []}
                                    >
                                      <div
                                        className="c4"
                                      />
                                    </SectionDescription>
                                  </Styled(SectionDescription)>
                                </div>
                              </Cell>
                              <Cell
                                size={
                                  Object {
                                    "desktop": "shrink",
                                    "min": 12,
                                    "tablet": "shrink",
                                  }
                                }
                              >
                                <div
                                  className="ihrCell desktop-shrink tablet-shrink min-12"
                                />
                              </Cell>
                            </div>
                          </XYGrid>
                        </div>
                      </styled.div>
                    </div>
                  </Cell>
                  <Cell
                    size={
                      Object {
                        "min": 12,
                      }
                    }
                  >
                    <div
                      className="ihrCell min-12"
                    >
                      <StyledTitledSectionBody>
                        <div
                          className="c5"
                        >
                          section 1
                        </div>
                      </StyledTitledSectionBody>
                    </div>
                  </Cell>
                </div>
              </XYGrid>
            </div>
          </styled.div>
        </Styled(styled.div)>
      </TitledSection>
    </div>
  </styled.div>
</SectionList>
`;

exports[`<SectionList /> should render a section list with an annotated section without props 1`] = `
@media only screen and (min-width:640px) {
  .c0 {
    margin-left: 24px;
    margin-right: 24px;
  }
}

@media only screen and (min-width:640px) {
  .c2 {
    border-bottom: 1px solid #E1E6EB;
  }

  .c2:last-child {
    border-bottom: 0;
  }
}

@media only screen and (max-width:639px) {
  .c1 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c1 {
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (min-width:640px) {
  .c5 {
    margin-left: 24px;
  }
}

@media only screen and (max-width:639px) {
  .c5 {
    background-color: #FAFBFC;
    border-top: 1px solid #E1E6EB;
    border-bottom: 1px solid #E1E6EB;
    padding: 24px 16px;
  }
}

@media only screen and (max-width:639px) {
  .c4 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c4 {
    margin-right: 24px;
  }
}

@media only screen and (min-width:640px) {
  .c3 {
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

<SectionList>
  <styled.div>
    <div
      className="c0"
    >
      <Styled(styled.div)>
        <styled.div
          className="c1"
        >
          <div
            className="c1 c2"
          >
            section 1
          </div>
        </styled.div>
      </Styled(styled.div)>
      <AnnotatedSection
        links={Array []}
      >
        <Styled(styled.div)>
          <styled.div
            className="c3"
          >
            <div
              className="c3 c2"
            >
              <XYGrid
                gutterMarginX={false}
                gutterMarginY={false}
                gutterPaddingX={false}
                gutterPaddingY={false}
                vertical={false}
              >
                <div
                  className="ihrGridX"
                >
                  <Cell
                    size={
                      Object {
                        "desktop": 4,
                        "min": 12,
                        "tablet": 4,
                      }
                    }
                  >
                    <div
                      className="ihrCell desktop-4 tablet-4 min-12"
                    >
                      <Styled(SectionDescription)
                        links={Array []}
                      >
                        <SectionDescription
                          className="c4"
                          links={Array []}
                        >
                          <div
                            className="c4"
                          />
                        </SectionDescription>
                      </Styled(SectionDescription)>
                    </div>
                  </Cell>
                  <Cell
                    size={
                      Object {
                        "desktop": 8,
                        "min": 12,
                        "tablet": 8,
                      }
                    }
                  >
                    <div
                      className="ihrCell desktop-8 tablet-8 min-12"
                    >
                      <StyledAnnotatedSectionBody>
                        <div
                          className="c5"
                        >
                          section 2
                        </div>
                      </StyledAnnotatedSectionBody>
                    </div>
                  </Cell>
                </div>
              </XYGrid>
            </div>
          </styled.div>
        </Styled(styled.div)>
      </AnnotatedSection>
    </div>
  </styled.div>
</SectionList>
`;

exports[`<SectionList /> should render a sectionList 1`] = `
.c8 {
  -webkit-transition: color .25s ease-out;
  transition: color .25s ease-out;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  display: inline;
}

.c8,
.c8:link,
.c8:visited {
  color: #432DF3;
}

.c8:hover {
  color: #2512B3;
}

.c8:active {
  color: #0F0080;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  color: #424F5C;
  font-weight: 600;
}

.c7 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #667380;
  font-weight: 400;
  display: block;
}

.c13 {
  font-size: 18px;
  line-height: 24px;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  color: #424F5C;
  font-weight: 600;
}

.c14 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #667380;
  font-weight: 400;
  display: block;
}

@media only screen and (min-width:640px) {
  .c0 {
    margin-left: 24px;
    margin-right: 24px;
  }
}

@media only screen and (min-width:640px) {
  .c2 {
    border-bottom: 1px solid #E1E6EB;
  }

  .c2:last-child {
    border-bottom: 0;
  }
}

@media only screen and (max-width:639px) {
  .c3 {
    padding: 0px 16px;
  }
}

@media only screen and (max-width:639px) {
  .c1 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c1 {
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (min-width:640px) {
  .c9 {
    margin-left: 24px;
  }
}

@media only screen and (max-width:639px) {
  .c9 {
    background-color: #FAFBFC;
    border-top: 1px solid #E1E6EB;
    border-bottom: 1px solid #E1E6EB;
    padding: 24px 16px;
  }
}

@media only screen and (max-width:639px) {
  .c5 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c5 {
    margin-right: 24px;
  }
}

@media only screen and (min-width:640px) {
  .c4 {
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (min-width:640px) {
  .c10 {
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (max-width:639px) {
  .c11 {
    padding: 24px 16px 12px;
  }
}

@media only screen and (max-width:639px) {
  .c12 {
    padding-bottom: 12px;
  }
}

@media only screen and (min-width:640px) {
  .c12 {
    margin-right: 24px;
  }
}

@media only screen and (min-width:640px) {
  .c15 {
    padding-top: 1.5rem;
  }
}

@media only screen and (max-width:639px) {
  .c15 {
    background-color: #FAFBFC;
    border-top: 1px solid #E1E6EB;
    border-bottom: 1px solid #E1E6EB;
    padding: 24px 16px;
  }
}

<SectionList>
  <styled.div>
    <div
      className="c0"
    >
      <Styled(styled.div)>
        <styled.div
          className="c1"
        >
          <div
            className="c1 c2"
          >
            section 1
          </div>
        </styled.div>
      </Styled(styled.div)>
      <styled.div>
        <div
          className="c3"
        >
          section 2
        </div>
      </styled.div>
      <AnnotatedSection
        description="Annotated Description"
        header="Annotated Section"
        linkProps={
          Object {
            "href": "#",
          }
        }
        linkText="Annotated Link"
        links={Array []}
      >
        <Styled(styled.div)>
          <styled.div
            className="c4"
          >
            <div
              className="c4 c2"
            >
              <XYGrid
                gutterMarginX={false}
                gutterMarginY={false}
                gutterPaddingX={false}
                gutterPaddingY={false}
                vertical={false}
              >
                <div
                  className="ihrGridX"
                >
                  <Cell
                    size={
                      Object {
                        "desktop": 4,
                        "min": 12,
                        "tablet": 4,
                      }
                    }
                  >
                    <div
                      className="ihrCell desktop-4 tablet-4 min-12"
                    >
                      <Styled(SectionDescription)
                        description="Annotated Description"
                        header="Annotated Section"
                        linkProps={
                          Object {
                            "href": "#",
                          }
                        }
                        linkText="Annotated Link"
                        links={Array []}
                      >
                        <SectionDescription
                          className="c5"
                          description="Annotated Description"
                          header="Annotated Section"
                          linkProps={
                            Object {
                              "href": "#",
                            }
                          }
                          linkText="Annotated Link"
                          links={Array []}
                        >
                          <div
                            className="c5"
                          >
                            <Text
                              color="#424F5C"
                              isInline={true}
                              tag="h2"
                              type="heading"
                            >
                              <styled.h2
                                color="#424F5C"
                                data-component-type="text"
                                isInline={true}
                                textType="heading"
                              >
                                <h2
                                  className="c6"
                                  color="#424F5C"
                                  data-component-type="text"
                                >
                                  Annotated Section
                                </h2>
                              </styled.h2>
                            </Text>
                            <Text
                              color="#667380"
                              isInline={false}
                              tag="span"
                              type="small"
                            >
                              <styled.span
                                color="#667380"
                                data-component-type="text"
                                isInline={false}
                                textType="small"
                              >
                                <span
                                  className="c7"
                                  color="#667380"
                                  data-component-type="text"
                                >
                                  Annotated Description
                                </span>
                              </styled.span>
                            </Text>
                            <TextLink
                              href="#"
                              isInline={true}
                              textType="small"
                            >
                              <Styled(Component)
                                href="#"
                                isInline={true}
                                textType="small"
                              >
                                <Component
                                  className="c8"
                                  href="#"
                                  isInline={true}
                                  textType="small"
                                >
                                  <Anchor
                                    className="c8"
                                    href="#"
                                  >
                                    <a
                                      className="c8"
                                      href="#"
                                    >
                                      Annotated Link
                                    </a>
                                  </Anchor>
                                </Component>
                              </Styled(Component)>
                            </TextLink>
                          </div>
                        </SectionDescription>
                      </Styled(SectionDescription)>
                    </div>
                  </Cell>
                  <Cell
                    size={
                      Object {
                        "desktop": 8,
                        "min": 12,
                        "tablet": 8,
                      }
                    }
                  >
                    <div
                      className="ihrCell desktop-8 tablet-8 min-12"
                    >
                      <StyledAnnotatedSectionBody>
                        <div
                          className="c9"
                        >
                          section 2
                        </div>
                      </StyledAnnotatedSectionBody>
                    </div>
                  </Cell>
                </div>
              </XYGrid>
            </div>
          </styled.div>
        </Styled(styled.div)>
      </AnnotatedSection>
      <TitledSection
        actionItems={
          Array [
            <Button
              hasLegacyMargins={false}
              iconAlignment="left"
              showSpinner={false}
              type="primary"
            >
              Action 1
            </Button>,
            <Button
              hasLegacyMargins={false}
              iconAlignment="left"
              showSpinner={false}
              type="primary"
            >
              Action 2
            </Button>,
          ]
        }
        description="Titled Description"
        header="Titled Section"
      >
        <Styled(styled.div)>
          <styled.div
            className="c10"
          >
            <div
              className="c10 c2"
            >
              <XYGrid
                gutterMarginX={false}
                gutterMarginY={false}
                gutterPaddingX={false}
                gutterPaddingY={false}
                vertical={false}
              >
                <div
                  className="ihrGridX"
                >
                  <Cell
                    size={
                      Object {
                        "min": 12,
                      }
                    }
                  >
                    <div
                      className="ihrCell min-12"
                    >
                      <styled.div>
                        <div
                          className="c11"
                        >
                          <XYGrid
                            gutterMarginX={false}
                            gutterMarginY={false}
                            gutterPaddingX={false}
                            gutterPaddingY={false}
                            vertical={false}
                            verticalAlignment="middle"
                          >
                            <div
                              className="ihrGridX align-middle"
                            >
                              <Cell
                                size={
                                  Object {
                                    "desktop": "auto",
                                    "min": 12,
                                    "tablet": "auto",
                                  }
                                }
                              >
                                <div
                                  className="ihrCell desktop-auto tablet-auto min-12"
                                >
                                  <Styled(SectionDescription)
                                    description="Titled Description"
                                    header="Titled Section"
                                  >
                                    <SectionDescription
                                      className="c12"
                                      description="Titled Description"
                                      header="Titled Section"
                                      links={Array []}
                                    >
                                      <div
                                        className="c12"
                                      >
                                        <Text
                                          color="#424F5C"
                                          isInline={true}
                                          tag="h2"
                                          type="heading"
                                        >
                                          <styled.h2
                                            color="#424F5C"
                                            data-component-type="text"
                                            isInline={true}
                                            textType="heading"
                                          >
                                            <h2
                                              className="c13"
                                              color="#424F5C"
                                              data-component-type="text"
                                            >
                                              Titled Section
                                            </h2>
                                          </styled.h2>
                                        </Text>
                                        <Text
                                          color="#667380"
                                          isInline={false}
                                          tag="span"
                                          type="small"
                                        >
                                          <styled.span
                                            color="#667380"
                                            data-component-type="text"
                                            isInline={false}
                                            textType="small"
                                          >
                                            <span
                                              className="c14"
                                              color="#667380"
                                              data-component-type="text"
                                            >
                                              Titled Description
                                            </span>
                                          </styled.span>
                                        </Text>
                                      </div>
                                    </SectionDescription>
                                  </Styled(SectionDescription)>
                                </div>
                              </Cell>
                              <Cell
                                size={
                                  Object {
                                    "desktop": "shrink",
                                    "min": 12,
                                    "tablet": "shrink",
                                  }
                                }
                              >
                                <div
                                  className="ihrCell desktop-shrink tablet-shrink min-12"
                                >
                                  <Button
                                    hasLegacyMargins={false}
                                    iconAlignment="left"
                                    key="1"
                                    showSpinner={false}
                                    type="primary"
                                  >
                                    <button
                                      className="button primary"
                                      data-component-type="button"
                                    >
                                      Action 1
                                    </button>
                                  </Button>
                                  <Button
                                    hasLegacyMargins={false}
                                    iconAlignment="left"
                                    key="2"
                                    showSpinner={false}
                                    type="primary"
                                  >
                                    <button
                                      className="button primary"
                                      data-component-type="button"
                                    >
                                      Action 2
                                    </button>
                                  </Button>
                                </div>
                              </Cell>
                            </div>
                          </XYGrid>
                        </div>
                      </styled.div>
                    </div>
                  </Cell>
                  <Cell
                    size={
                      Object {
                        "min": 12,
                      }
                    }
                  >
                    <div
                      className="ihrCell min-12"
                    >
                      <StyledTitledSectionBody>
                        <div
                          className="c15"
                        >
                          section 3
                        </div>
                      </StyledTitledSectionBody>
                    </div>
                  </Cell>
                </div>
              </XYGrid>
            </div>
          </styled.div>
        </Styled(styled.div)>
      </TitledSection>
    </div>
  </styled.div>
</SectionList>
`;

exports[`<SectionList /> should render sectionList items with no children 1`] = `
.c7 {
  -webkit-transition: color .25s ease-out;
  transition: color .25s ease-out;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  display: inline;
}

.c7,
.c7:link,
.c7:visited {
  color: #432DF3;
}

.c7:hover {
  color: #2512B3;
}

.c7:active {
  color: #0F0080;
}

.c5 {
  font-size: 18px;
  line-height: 24px;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  color: #424F5C;
  font-weight: 600;
}

.c6 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #667380;
  font-weight: 400;
  display: block;
}

.c11 {
  font-size: 18px;
  line-height: 24px;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  color: #424F5C;
  font-weight: 600;
}

.c12 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #667380;
  font-weight: 400;
  display: block;
}

@media only screen and (min-width:640px) {
  .c0 {
    margin-left: 24px;
    margin-right: 24px;
  }
}

@media only screen and (min-width:640px) {
  .c2 {
    border-bottom: 1px solid #E1E6EB;
  }

  .c2:last-child {
    border-bottom: 0;
  }
}

@media only screen and (max-width:639px) {
  .c1 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c1 {
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (max-width:639px) {
  .c4 {
    padding: 24px 16px;
  }
}

@media only screen and (min-width:640px) {
  .c4 {
    margin-right: 24px;
  }
}

@media only screen and (min-width:640px) {
  .c3 {
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (min-width:640px) {
  .c8 {
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

@media only screen and (max-width:639px) {
  .c9 {
    padding: 24px 16px 12px;
  }
}

@media only screen and (max-width:639px) {
  .c10 {
    padding-bottom: 12px;
  }
}

@media only screen and (min-width:640px) {
  .c10 {
    margin-right: 24px;
  }
}

<SectionList>
  <styled.div>
    <div
      className="c0"
    >
      <Styled(styled.div)>
        <styled.div
          className="c1"
        >
          <div
            className="c1 c2"
          />
        </styled.div>
      </Styled(styled.div)>
      <AnnotatedSection
        description="Annotated Description"
        header="Annotated Section"
        linkProps={
          Object {
            "href": "#",
          }
        }
        linkText="Annotated Link"
        links={Array []}
      >
        <Styled(styled.div)>
          <styled.div
            className="c3"
          >
            <div
              className="c3 c2"
            >
              <XYGrid
                gutterMarginX={false}
                gutterMarginY={false}
                gutterPaddingX={false}
                gutterPaddingY={false}
                vertical={false}
              >
                <div
                  className="ihrGridX"
                >
                  <Cell
                    size={
                      Object {
                        "desktop": 4,
                        "min": 12,
                        "tablet": 4,
                      }
                    }
                  >
                    <div
                      className="ihrCell desktop-4 tablet-4 min-12"
                    >
                      <Styled(SectionDescription)
                        description="Annotated Description"
                        header="Annotated Section"
                        linkProps={
                          Object {
                            "href": "#",
                          }
                        }
                        linkText="Annotated Link"
                        links={Array []}
                      >
                        <SectionDescription
                          className="c4"
                          description="Annotated Description"
                          header="Annotated Section"
                          linkProps={
                            Object {
                              "href": "#",
                            }
                          }
                          linkText="Annotated Link"
                          links={Array []}
                        >
                          <div
                            className="c4"
                          >
                            <Text
                              color="#424F5C"
                              isInline={true}
                              tag="h2"
                              type="heading"
                            >
                              <styled.h2
                                color="#424F5C"
                                data-component-type="text"
                                isInline={true}
                                textType="heading"
                              >
                                <h2
                                  className="c5"
                                  color="#424F5C"
                                  data-component-type="text"
                                >
                                  Annotated Section
                                </h2>
                              </styled.h2>
                            </Text>
                            <Text
                              color="#667380"
                              isInline={false}
                              tag="span"
                              type="small"
                            >
                              <styled.span
                                color="#667380"
                                data-component-type="text"
                                isInline={false}
                                textType="small"
                              >
                                <span
                                  className="c6"
                                  color="#667380"
                                  data-component-type="text"
                                >
                                  Annotated Description
                                </span>
                              </styled.span>
                            </Text>
                            <TextLink
                              href="#"
                              isInline={true}
                              textType="small"
                            >
                              <Styled(Component)
                                href="#"
                                isInline={true}
                                textType="small"
                              >
                                <Component
                                  className="c7"
                                  href="#"
                                  isInline={true}
                                  textType="small"
                                >
                                  <Anchor
                                    className="c7"
                                    href="#"
                                  >
                                    <a
                                      className="c7"
                                      href="#"
                                    >
                                      Annotated Link
                                    </a>
                                  </Anchor>
                                </Component>
                              </Styled(Component)>
                            </TextLink>
                          </div>
                        </SectionDescription>
                      </Styled(SectionDescription)>
                    </div>
                  </Cell>
                </div>
              </XYGrid>
            </div>
          </styled.div>
        </Styled(styled.div)>
      </AnnotatedSection>
      <TitledSection
        actionItems={
          Array [
            <Button
              hasLegacyMargins={false}
              iconAlignment="left"
              showSpinner={false}
              type="primary"
            >
              Action 1
            </Button>,
            <Button
              hasLegacyMargins={false}
              iconAlignment="left"
              showSpinner={false}
              type="primary"
            >
              Action 2
            </Button>,
          ]
        }
        description="Titled Description"
        header="Titled Section"
      >
        <Styled(styled.div)>
          <styled.div
            className="c8"
          >
            <div
              className="c8 c2"
            >
              <XYGrid
                gutterMarginX={false}
                gutterMarginY={false}
                gutterPaddingX={false}
                gutterPaddingY={false}
                vertical={false}
              >
                <div
                  className="ihrGridX"
                >
                  <Cell
                    size={
                      Object {
                        "min": 12,
                      }
                    }
                  >
                    <div
                      className="ihrCell min-12"
                    >
                      <styled.div>
                        <div
                          className="c9"
                        >
                          <XYGrid
                            gutterMarginX={false}
                            gutterMarginY={false}
                            gutterPaddingX={false}
                            gutterPaddingY={false}
                            vertical={false}
                            verticalAlignment="middle"
                          >
                            <div
                              className="ihrGridX align-middle"
                            >
                              <Cell
                                size={
                                  Object {
                                    "desktop": "auto",
                                    "min": 12,
                                    "tablet": "auto",
                                  }
                                }
                              >
                                <div
                                  className="ihrCell desktop-auto tablet-auto min-12"
                                >
                                  <Styled(SectionDescription)
                                    description="Titled Description"
                                    header="Titled Section"
                                  >
                                    <SectionDescription
                                      className="c10"
                                      description="Titled Description"
                                      header="Titled Section"
                                      links={Array []}
                                    >
                                      <div
                                        className="c10"
                                      >
                                        <Text
                                          color="#424F5C"
                                          isInline={true}
                                          tag="h2"
                                          type="heading"
                                        >
                                          <styled.h2
                                            color="#424F5C"
                                            data-component-type="text"
                                            isInline={true}
                                            textType="heading"
                                          >
                                            <h2
                                              className="c11"
                                              color="#424F5C"
                                              data-component-type="text"
                                            >
                                              Titled Section
                                            </h2>
                                          </styled.h2>
                                        </Text>
                                        <Text
                                          color="#667380"
                                          isInline={false}
                                          tag="span"
                                          type="small"
                                        >
                                          <styled.span
                                            color="#667380"
                                            data-component-type="text"
                                            isInline={false}
                                            textType="small"
                                          >
                                            <span
                                              className="c12"
                                              color="#667380"
                                              data-component-type="text"
                                            >
                                              Titled Description
                                            </span>
                                          </styled.span>
                                        </Text>
                                      </div>
                                    </SectionDescription>
                                  </Styled(SectionDescription)>
                                </div>
                              </Cell>
                              <Cell
                                size={
                                  Object {
                                    "desktop": "shrink",
                                    "min": 12,
                                    "tablet": "shrink",
                                  }
                                }
                              >
                                <div
                                  className="ihrCell desktop-shrink tablet-shrink min-12"
                                >
                                  <Button
                                    hasLegacyMargins={false}
                                    iconAlignment="left"
                                    key="1"
                                    showSpinner={false}
                                    type="primary"
                                  >
                                    <button
                                      className="button primary"
                                      data-component-type="button"
                                    >
                                      Action 1
                                    </button>
                                  </Button>
                                  <Button
                                    hasLegacyMargins={false}
                                    iconAlignment="left"
                                    key="2"
                                    showSpinner={false}
                                    type="primary"
                                  >
                                    <button
                                      className="button primary"
                                      data-component-type="button"
                                    >
                                      Action 2
                                    </button>
                                  </Button>
                                </div>
                              </Cell>
                            </div>
                          </XYGrid>
                        </div>
                      </styled.div>
                    </div>
                  </Cell>
                </div>
              </XYGrid>
            </div>
          </styled.div>
        </Styled(styled.div)>
      </TitledSection>
    </div>
  </styled.div>
</SectionList>
`;
